# sparky

./: .gitignore  Cargo.toml  extract.py  extract.sh
.github/workflows/: release.yaml  rust.yml
src/: main.rs
