[package]
name = "sparky"
version = "0.1.5"
edition = "2024"

[dependencies]
image = "0.25.1"
winit = "0.30.12"

# OpenGL dependencies
gl = "0.14.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"

# Required for glutin
raw-window-handle = "0.6.2"
rand = "0.9.2"
tray-icon = "0.21.1"
log = "0.4.27"
simplelog = "0.12.2"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18.2"
